# tauri-workflow-template

./: .gitignore  .stylelintignore  .stylelintrc.cjs  .stylelintrc.production.cjs  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.arm64  README.md  docker-menu.ps1  docker-menu.sh  run-docker-script.js
docs/: DEVELOPMENT_PLAN.md  GITHUB_ACTIONS_TRIGGER_GUIDE.md  TODO-INDEX.md
docs/backups/: old-docker-scripts.md
docs/third-party-api-docs/blueprint.js-api/: docs_blueprint_getting-started.js-environment.md  docs_blueprint_principles.browser-support.md  docs_blueprint_reading-the-docs.understanding-typescript.md  docs_core.md  docs_core_accessibility.ignoring-focus-style-manager.md  docs_core_classes.namespacing.md  docs_core_colors.sequential-color-schemes.md  docs_core_components_alert.props-interface.md  (+104 more)
src/: App.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: clipboard.json  default.json  dialog.json  filesystem.json  network.json  system.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatHeader.scss  ChatHeader.tsx  ChatSidebar.scss  ChatSidebar.tsx  ChatWindow.scss  ChatWindow.tsx  CustomButton.tsx  MessageInput.scss  MessageInput.tsx  MessageItem.scss  MessageItem.tsx  MessageList.scss  MessageList.tsx  ScrollableContent.tsx  TypingIndicator.scss  TypingIndicator.tsx  UserAvatar.scss  UserAvatar.tsx
src/hooks/: usePerfectScrollbar.ts
src/styles/: README.md  main.scss
src/types/: chat.ts
src/utils/: mockData.ts
(+296 files in other folders)
